fix: исправлены z-index

--- a/src/components/FilterCheckbox/FilterCheckbox.css
+++ b/src/components/FilterCheckbox/FilterCheckbox.css
@@ -30,7 +30,7 @@
     left: 2px;
     transition: all 0.4s ease;
     cursor: pointer;
-    z-index: 10;
+    z-index: 1;
 }
 
 .filter-group__checkbox:checked + .filter-group__checkbox-label {
@@ -47,7 +47,7 @@
     height: 20px;
     background-color: #222;
     border-radius: 50px;
-    z-index: 0;
+    /*z-index: 0;*/
     box-shadow: 0 3px 14px rgba(0, 0, 0, 0.08);
 }
 
